--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -99,3 +99,8 @@ jobs:
           REGION: ${{ secrets.ACTIONS_AWS_REGION }}
           FunctionName: spinnaker-trigger-dev-deployer
           Payload: '{"application": "${{ steps.read_project_name.outputs.rootProject-name }}", "tag": "${{ steps.read_version.outputs.build-version }}", "gitLog": "${{ steps.build.outputs.gitLog }}", "repositoryName": "${{ github.repository }}"}'
+      - name: Trigger SDK Build
+        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop'
+        run: |
+          CRUMB=`curl -s -u "${secrets.JENKINS_USER}:${secrets.JENKINS_TOKEN}" 'https://${secrets.JENKINS_URL}/crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)'`
+          curl -X POST -I -u ${secrets.JENKINS_USER}:${secrets.JENKINS_TOKEN} -H "$CRUMB" https://${secrets.JENKINS_URL}/job/dais-technology/job/javascript-sdk-minimal/job/master/buildWithParameters
