--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -54,12 +54,13 @@ jobs:
           echo "${GRADLE_PROPERTIES}" > ~/.gradle/gradle.properties
           git fetch --tags
           git status --porcelain
+          ./gradlew --refresh-dependencies version
           if [[ "$default_branch" = "master" || "$default_branch" = "develop" ]]; then
-            ./gradlew --refresh-dependencies version
             ./gradlew release -x test
             echo "::set-output name=gitLog::$gitLog"
           fi
       - name: Read Version
+        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop'
         id: read_version
         uses: christian-draeger/read-properties@1.1.0
         with:
