--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -55,6 +55,9 @@ jobs:
           git fetch --tags
           git status --porcelain
           ./gradlew --refresh-dependencies version
+          ./gradlew release -x test
+           echo "::set-output name=gitLog::$gitLog"
+
           if [[ "$default_branch" = "master" || "$default_branch" = "develop" ]]; then
             ./gradlew release -x test
             echo "::set-output name=gitLog::$gitLog"
