--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -54,7 +54,7 @@ jobs:
           echo "${GRADLE_PROPERTIES}" > ~/.gradle/gradle.properties
           git fetch --tags
           git status --porcelain
-          ./gradlew --refresh-dependencies
+          ./gradlew --refresh-dependencies version
           if [[ "$default_branch" = "master" || "$default_branch" = "develop" ]]; then
             ./gradlew version
             ./gradlew release -x test
