--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -70,12 +70,14 @@ jobs:
           path: 'settings.gradle'
           properties: 'rootProject.name'
       - name: Publish
+        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop')      
         id: publish
         run: |
           echo ${{ steps.read_version.outputs.build-version }}
           echo ${{ steps.read_project_name.outputs.rootProject-name }}
           ./gradlew -x test artifactoryPublish pushDocker
       - name: Push values.yaml to DAIS s3
+        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop')      
         run: |
           cat values.yaml > values-${{ steps.read_version.outputs.build-version }}.yaml
           echo 'image: ' >> values-${{ steps.read_version.outputs.build-version }}.yaml
@@ -98,6 +100,7 @@ jobs:
           FunctionName: spinnaker-trigger-dev-deployer
           Payload: '{"application": "${{ steps.read_project_name.outputs.rootProject-name }}", "tag": "${{ steps.read_version.outputs.build-version }}", "gitLog": "${{ steps.build.outputs.gitLog }}", "repositoryName": "${{ github.repository }}"}'
       - name: Trigger SDK Build
+        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop')
         run: |
           CRUMB=$(curl -s -u "${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_TOKEN}}" 'https://${{ secrets.JENKINS_URL}}/crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)')
           curl -X POST -s -u ${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_TOKEN }} -H "$CRUMB" https://${{ secrets.JENKINS_URL}}/job/dais-technology/job/javascript-sdk-minimal/job/master/buildWithParameters?force=true
