--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -5,6 +5,10 @@ on:
       aws-role-to-assume:
         required: true
         type: string
+      jdk:
+        required: false      
+        type: string
+        default: "11"
   workflow_dispatch:
 permissions:
   id-token: write
@@ -29,7 +33,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: ${{ inpupts.jdk }}
           distribution: 'adopt'
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
