--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           token: ${{ secrets.DAIS_MACHINE_GITHUB_TOKEN }}
           fetch-depth: 0
-      - name: Set up JDK 11
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           java-version: ${{ inpupts.jdk }}
