--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          token: ${{ secrets.github-token }}
+          token: ${{ secrets.DAIS_MACHINE_GITHUB_TOKEN }}
           fetch-depth: 0
       - uses: actions/setup-python@v4 
         with:
@@ -33,8 +33,8 @@ jobs:
       - name: Python Build and Release
         shell: build
         run: |
-          git config user.name ${{ secrets.dais-machine-github-username }}
-          git config user.email ${{ secrets.dais-machine-github-email }}
+          git config user.name ${{ secrets.DAIS_MACHINE_GITHUB_USERNAME }}
+          git config user.email ${{ secrets.DAIS_MACHINE_GITHUB_EMAIL }}
           gitLog=$(git log -1 --pretty=%B | sed s/\'/\"/ | sed s/\"/\'/ | sed s/'→'/'->'/)
           pip3 install .[dev]
           projectName=$(python3 setup.py --name)
