--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -64,6 +64,7 @@ jobs:
             echo "New version is $version"
             default_branch=$(git branch --show-current)
             repositoryName=$(node -pe "require('./package.json').name.replace('@dais/', '')")
+            if [[ "$repositoryName" = "ioi-product-clean-answers" ]]; then
             npm publish
             git push origin $default_branch --tags
             echo "::set-output name=imageVersion::$version"
@@ -73,7 +74,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_TOKEN_READ: ${{ secrets.NPM_TOKEN }}
-          AWESOME_TOKEN: ${{ secrets.FONTAWESOME_TOKEN }}
+          FONTAWESOME_TOKEN: ${{ secrets.FONTAWESOME_TOKEN }}
           BIT_AUTH_TOKEN: ${{ secrets.BIT_AUTH_TOKEN }}
       - name: Build, tag, and push docker image to Amazon ECR
         if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop'     
