--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -62,6 +62,12 @@ jobs:
           ./gradlew --refresh-dependencies version
           ./gradlew release -x test
            echo "::set-output name=gitLog::$gitLog"
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: always()
+        with:
+          report_paths: 'build/test-results/test/TEST-*.xml'
+          require_tests: false
       - name: Publish
         if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop')      
         id: publish
