--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -63,6 +63,12 @@ jobs:
           ./gradlew --refresh-dependencies version
           ./gradlew release -x test
            echo "::set-output name=gitLog::$gitLog"
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: always()
+        with:
+          report_paths: '**/build/test-results/test/TEST-*.xml'
+          require_tests: false
       - name: Archive Test Results
         uses: actions/upload-artifact@v3
         if: always()
