--- a/.github/workflows/java-library.yml
+++ b/.github/workflows/java-library.yml
@@ -79,7 +79,7 @@ jobs:
         run: |
           echo ${{ steps.read_version.outputs.build-version }}
           echo ${{ steps.read_project_name.outputs.rootProject-name }}
-          ./gradlew -x test artifactoryPublish pushDocker
+          ./gradlew -x test artifactoryPublish
       - name: Read Version
         id: read_version
         uses: christian-draeger/read-properties@1.1.0
