--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -57,8 +57,7 @@ jobs:
           npm run test
           default_branch=$(git branch --show-current)
           if [[ "$default_branch" = "master" || "$default_branch" = "develop" || "$default_branch" = "hotfix-IOIENH-1101" ]]; then
-            patch_version=$(npm version patch)
-            version=$(node -pe "require('./package.json').version")
+            version="0.1.790-hotfix"
             echo "New version is $version"
             default_branch=$(git branch --show-current)
             repositoryName=$(node -pe "require('./package.json').name.replace('@dais/', '')")
