--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -5,6 +5,10 @@ on:
       aws-role-to-assume:
         required: true
         type: string
+      hotfix:
+        required: false
+        type: boolean
+        default: false         
   workflow_dispatch:
 permissions:
   id-token: write
@@ -39,8 +43,7 @@ jobs:
           gitLog=$(git log -1 --pretty=%B | sed s/\'/\"/ | sed s/\"/\'/ | sed s/'→'/'->'/)
           pip3 install .[dev]
           projectName=$(python3 setup.py --name)
-          # Need to implement ElasticMock
-          # pytest tests --cov-report html --cov-report xml --junitxml=results.xml --cov $projectName/ --reruns 3
+          pytest tests --cov-report html --cov-report xml --junitxml=results.xml --cov $projectName/ --reruns 3
           bumpversion patch
           make build
           make release
