--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -56,16 +56,26 @@ jobs:
           npm ci --ignore-scripts
           npm run test
           default_branch=$(git branch --show-current)
-          if [[ "$default_branch" = "master" || "$default_branch" = "develop" ]]; then
-            patch_version=$(npm version patch)
+          repositoryName=$(node -pe "require('./package.json').name.replace('@dais/', '')")
+          if [[ "$default_branch" = "master" || "$default_branch" = "develop" || "${{ inputs.hotfix }}" ==  "true" ]]; then
             version=$(node -pe "require('./package.json').version")
-            echo "New version is $version"
-            default_branch=$(git branch --show-current)
-            repositoryName=$(node -pe "require('./package.json').name.replace('@dais/', '')")
-            if [[ "$repositoryName" = "ioi-product-clean-answers" ]]; then
-              npm publish
+            fullSha=$(git rev-parse HEAD)
+            partialCommit=${fullSha:0:6}
+            if [[ "${{ inputs.hotfix }}" ==  "true" ]]; then
+              part=$(echo $version | awk '{split($0,a,"."); print a[1]}')
+              partWithDashes=%(echo ${part//./-})
+              imageVersion = "${partWithDashes}-${{github.run_number}}-${partialCommit}"              
+              deployVersion = ${imageVersion}
+            else
+              patch_version=$(npm version patch)              
+              echo "New version is $version"
+              default_branch=$(git branch --show-current)
+              if [[ "$repositoryName" = "ioi-product-clean-answers" ]]; then
+                npm publish
+              fi
+              git push origin $default_branch --tags
             fi
-            git push origin $default_branch --tags
+
             echo "::set-output name=imageVersion::$version"
             echo "::set-output name=projectName::$repositoryName"
             echo "::set-output name=gitLog::$gitLog"
