--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -72,6 +72,7 @@ jobs:
               partWithDashes=$(echo ${part//./-})
               imageVersion="${partWithDashes}-${{github.run_number}}-${partialCommit}"              
               deployVersion=${imageVersion}
+              version=${imageVersion}
             else
               patch_version=$(npm version patch)              
               echo "New version is $version"
