--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -8,7 +8,11 @@ on:
       hotfix:
         required: false
         type: boolean
-        default: false         
+        default: false
+      runner:
+        required: false      
+        type: string
+        default: "ubuntu-latest"
   workflow_dispatch:
 permissions:
   id-token: write
@@ -16,7 +20,7 @@ permissions:
 jobs:
   build:
     if: github.actor != 'dais-machine'
-    runs-on: ubuntu-latest
+    runs-on: ${{ inputs.runner }}
     steps:
       - uses: actions/checkout@v3
         with:
