--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -47,6 +47,8 @@ jobs:
           AWS_REGION: "us-west-2"
           GATE_ENDPOINT: "https://gate.dais.com"
           SPINNAKER_TOKEN: "my-fake-token"
+          DATADOG_API_TOKEN: ${{ secrets.DATADOG_API_TOKEN }}
+          DATADOG_APP_TOKEN: ${{ secrets.DATADOG_APP_TOKEN }}
           GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
           ARTIFACTORY_USERNAME: ${{ secrets.PIP_USERNAME }}
           ARTIFACTORY_PASSWORD: ${{ secrets.PIP_PASSWORD }}      
